--- a/web/src/index.html
+++ b/web/src/index.html
@@ -10,6 +10,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://kit.fontawesome.com/36a0021949.js" crossorigin="anonymous" defer></script>
+  <script src="https://kit.fontawesome.com/36a0021949.js" crossorigin="anonymous"></script>
+  <!-- <script src="/web/src/assets/JS/fontawesome.js"></script> -->
 </head>
 <body class="mat-typography">
   <app-root></app-root>
