--- a/web/src/index.html
+++ b/web/src/index.html
@@ -13,7 +13,7 @@
   <script src="https://kit.fontawesome.com/36a0021949.js" crossorigin="anonymous"></script>
   <!-- <script src="/web/src/assets/JS/fontawesome.js"></script> -->
 </head>
-<body class="mat-typography">
+<body class="mat-typography bg-gray-50">
   <app-root></app-root>
 </body>
 </html>
